--- a/config/database.yml
+++ b/config/database.yml
@@ -22,15 +22,18 @@ default: &default
 development:
   <<: *default
   database: howarts_rails_development
-
+  username: postgres
+  password: Clases#2024!
+  port: 5432
+  
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  username: postgres
+  
 
   # The password associated with the PostgreSQL role (username).
-  password: Clases#2024!
+  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -39,7 +42,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -82,6 +85,7 @@ test:
 #
 production:
   <<: *default
-  database: howarts_rails_production
-  username: howarts_rails
-  password: <%= ENV["HOWARTS_RAILS_DATABASE_PASSWORD"] %>
+  #database: howarts_rails_production
+  #username: howarts_rails
+  #password: <%= ENV["HOWARTS_RAILS_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
