--- a/render.yaml
+++ b/render.yaml
@@ -16,4 +16,8 @@ services:
       - key: DATABASE_URL
         fromDatabase:
           name: howarts_rails
-          property: connect
+          property: connectionString
+      - key: RAILS_MASTER_KEY
+              sync: false
+      - key: WEB_CONCURRENCY
+        value: 2 # sensible default
