--- a/config/database.yml
+++ b/config/database.yml
@@ -85,7 +85,7 @@ test:
 #
 production:
   <<: *default
-  database: howarts_rails_production
-  username: howarts_rails
-  password: <%= ENV["HOWARTS_RAILS_DATABASE_PASSWORD"] %>
-  #url: <%= ENV["DATABASE_URL"] %>
+  #database: howarts_rails_production
+  #username: howarts_rails
+  #password: <%= ENV["HOWARTS_RAILS_DATABASE_PASSWORD"] %>
+  url: <%= ENV["DATABASE_URL"] %>
